@@ -33,26 +33,7 @@ class S2Dao_PagerResultSetWrapperImpl implements S2Dao_PagerResultSetWrapper
      */
     public function filter($result, $condition)
     {
-        $returnArray = false;
-        $retValue = new S2Dao_ArrayList();
-        if(!($result instanceof S2Dao_ArrayList)){
-            $result = new S2Dao_ArrayList(new ArrayObject($result));
-            $returnArray = true;
-        }
-        
-        $condition->setCount($result->size());
-     
-        $limit = $condition->getOffset() + $condition->getLimit();
-        $count = $condition->getCount();
-        $start = $condition->getOffset() == null ? 0 : $condition->getOffset();
-        for($i = $start; $i < $limit && $i < $count; $i++){
-            $retValue->add($result->get($i));
-        }
-
-        if($returnArray){
-            return $retValue->toArray();
-        }
-        return $retValue;
+        return S2Dao_PagerUtil::filter($result, $condition);
     }
 
 }
